style: cards ready

--- a/maquettes/index.html
+++ b/maquettes/index.html
@@ -47,7 +47,7 @@
                     </div>
                     <div class="card-text">
                         <i class="fa-solid fa-calendar-days"></i>
-                        <p class="text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cupiditate distinctio eveniet fugit ullam, tempora, aut tempore minima quo deleniti quod consequatur ex sequi? Recusandae reprehenderit consectetur tempore mollitia quisquam delectus vitae. Incidunt consequuntur praesentium expedita culpa iure vel mollitia necessitatibus earum eveniet! Optio qui adipisci odio? Error corrupti officiis illum.</p>
+                        <p class="text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cupiditate distinctio eveniet fugit ullam, tempora, aut tempore minima quo deleniti quod consequatur ex sequi? Recusandae reprehenderit consectetur tempore mollitia quisquam delectus vitae.</p>
                     </div>
                 </div>
                 <div class="card">
@@ -56,7 +56,7 @@
                     </div>
                     <div class="card-text">
                         <i class="fa-solid fa-film"></i>
-                        <p class="text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cupiditate distinctio eveniet fugit ullam, tempora, aut tempore minima quo deleniti quod consequatur ex sequi? Recusandae reprehenderit consectetur tempore mollitia quisquam delectus vitae. Incidunt consequuntur praesentium expedita culpa iure vel mollitia necessitatibus earum eveniet! Optio qui adipisci odio? Error corrupti officiis illum.</p>
+                        <p class="text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cupiditate distinctio eveniet fugit ullam, tempora, aut tempore minima quo deleniti quod consequatur ex sequi? Recusandae reprehenderit consectetur tempore mollitia quisquam delectus vitae.</p>
                     </div>
                 </div>
             </div><!-- /grid-1 -->
@@ -67,7 +67,7 @@
                     </div>
                     <div class="card-text">
                         <i class="fa-solid fa-user"></i>
-                        <p class="text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cupiditate distinctio eveniet fugit ullam, tempora, aut tempore minima quo deleniti quod consequatur ex sequi? Recusandae reprehenderit consectetur tempore mollitia quisquam delectus vitae. Incidunt consequuntur praesentium expedita culpa iure vel mollitia necessitatibus earum eveniet! Optio qui adipisci odio? Error corrupti officiis illum.</p>
+                        <p class="text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cupiditate distinctio eveniet fugit ullam, tempora, aut tempore minima quo deleniti quod consequatur ex sequi? Recusandae reprehenderit consectetur tempore mollitia quisquam delectus vitae.</p>
                     </div>
                 </div>
                 <div class="card">
@@ -76,7 +76,7 @@
                     </div>
                     <div class="card-text">
                         <i class="fa-brands fa-instagram"></i>
-                        <p class="text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cupiditate distinctio eveniet fugit ullam, tempora, aut tempore minima quo deleniti quod consequatur ex sequi? Recusandae reprehenderit consectetur tempore mollitia quisquam delectus vitae. Incidunt consequuntur praesentium expedita culpa iure vel mollitia necessitatibus earum eveniet! Optio qui adipisci odio? Error corrupti officiis illum.</p>
+                        <p class="text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cupiditate distinctio eveniet fugit ullam, tempora, aut tempore minima quo deleniti quod consequatur ex sequi? Recusandae reprehenderit consectetur tempore mollitia quisquam delectus vitae.</p>
                     </div>
                 </div>
             </div><!-- /grid-2 -->
