homepage desktop finished

--- a/maquettes/index.html
+++ b/maquettes/index.html
@@ -139,5 +139,38 @@
             </div>
         </form>
     </div><!-- /form -->
+    <section class="container-maps-news">
+        <div class="maps-container">
+            <div class="card">
+                <div class="text-coordonates">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2623.8735531366524!2d2.3067663158279794!3d48.87968700716077!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e66fbe98f714c3%3A0xe62425fddeddc402!2sParc%20Monceau!5e0!3m2!1sfr!2sfr!4v1648027513477!5m2!1sfr!2sfr" style="border:0; box-shadow: none;" allowfullscreen="" loading="lazy"></iframe>
+                    <h2><i class="fas fa-map"></i>
+                        S'y rendre</h2>
+                        <p class="text">Parc Monceau, Boulevard de Courcelles, Paris</p>
+                </div>
+            </div>
+        </div>
+        <div class="newsletter-container">
+            <div class="card">
+                <div class="card-img">
+                    <img src="./img/ticket.jpg" alt="ticket de cinema">
+                </div>
+                <div class="card-text">
+                    <p class="text">Lorem, ipsum dolor sit amet consectetur adipisicing elit..</p>
+                    <label for="newsletter">Votre Email</label>
+                    <input type="email" name="newsletter" id="newsletter">
+                    <button class="btn-rapid-form" type="submit">S"inscrire</button>
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <div class="footer-container">
+            <div class="col"><a href="">Politique de confidentialité</a></div>
+            <div class="col"><a href="">Conditions générales</a></div>
+            <div class="col"><a href="">Contact</a></div>
+        </div>
+        <span>2022&copy;Fesitvals des films plein air | Design : Web Agency</span>
+    </footer>
 </body>
 </html>
