program template ok && scss organization

--- a/maquettes/index.html
+++ b/maquettes/index.html
@@ -26,23 +26,23 @@
             <i class="fa-solid fa-xmark"></i>
             <div class="mobile hide">            
                 <ul>
-                    <li class="current">Accueil</li>
-                    <li><a href="">Actus</a></li>
-                    <li><a href="">Programme</a></li>
-                    <li><a href="">Réservation</a></li>
-                    <li><a href="">Contact</a></li>
-                    <li><a href="">À Propos</a></li>
+                    <li class="current"><a href="#">Accueil</a></li>
+                    <li><a href="./pages/actus.html">Actus</a></li>
+                    <li><a href="./pages/program.html"">Programme</a></li>
+                    <li><a href="./pages/booking.html">Réservation</a></li>
+                    <li><a href="./pages/contact.html">Contact</a></li>
+                    <li><a href="./pages/purpose.html">À Propos</a></li>
                 </ul>
             </div>
         </div>
         <nav class="desktop">
             <ul>
-                <li class="current">Accueil</li>
-                <li><a href="">Actus</a></li>
-                <li><a href="">Programme</a></li>
-                <li><a href="">Réservation</a></li>
-                <li><a href="">Contact</a></li>
-                <li><a href="">À Propos</a></li>
+                <li class="current"><a href="#">Accueil</a></li>
+                    <li><a href="./pages/actus.html">Actus</a></li>
+                    <li><a href="./pages/program.html">Programme</a></li>
+                    <li><a href="./pages/booking.html">Réservation</a></li>
+                    <li><a href="./pages/contact.html">Contact</a></li>
+                    <li><a href="./pages/purpose.html">À Propos</a></li>
             </ul>
         </nav>
         
@@ -193,9 +193,9 @@
     </section>
     <footer>
         <div class="footer-container">
-            <div class="col"><a href="">Politique de confidentialité</a></div>
-            <div class="col"><a href="">Conditions générales</a></div>
-            <div class="col"><a href="">Contact</a></div>
+            <div class="col"><a href="./pages/policy.html">Politique de confidentialité</a></div>
+            <div class="col"><a href="./pages/confidentiality.html">Conditions générales</a></div>
+            <div class="col"><a href="./pages/contact.html">Contact</a></div>
         </div>
         <span>2022&copy;Fesitvals des films plein air | Design : Web Agency</span>
     </footer>
