fceat: contact form ok

--- a/maquettes/index.html
+++ b/maquettes/index.html
@@ -28,7 +28,7 @@
                 <ul>
                     <li class="current"><a href="#">Accueil</a></li>
                     <li><a href="./pages/actus.html">Actus</a></li>
-                    <li><a href="./pages/program.html"">Programme</a></li>
+                    <li><a href="./pages/program.html">Programme</a></li>
                     <li><a href="./pages/booking.html">Réservation</a></li>
                     <li><a href="./pages/contact.html">Contact</a></li>
                     <li><a href="./pages/purpose.html">À Propos</a></li>
@@ -155,6 +155,10 @@
                             <input type="checkbox" name="4-person" id="4-person">
                         </div>
                    </div>
+                    <div class="field">
+                        <label for="PMR"><i class="fa-brands fa-accessible-icon"></i> Acces PMR</label>
+                        <input type="checkbox" name="PMR" id="PMR">
+                    </div>
                 </div><!-- /checkbox-field -->
             </div>
             <div class="form-col">
