--- a/maquettes/pages/contact.html
+++ b/maquettes/pages/contact.html
@@ -1,1 +1,103 @@
-contact
+<!DOCTYPE html>
+<!-- 
+    /!\ -------- Important A lire -------- /!\
+
+        Ceci est une  maquettes d'apperçu, non définitve.
+        Les marges et les positions manquent de précision (mediaqueries),
+        Tout comme certains éléments sont faux (ex:carousel)
+
+    /!\ -------- Important A lire -------- /!\
+-->
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../../fontawesome-free-6.1.0-web/css/all.min.css">
+    <link rel="shortcut icon" href="../../images cahier des charges/logo.png" type="image/x-icon">
+    <script src="../js/app.js"></script>
+    <title>Accueil</title>
+</head>
+<body>
+    <header>
+        <div class="mobile-button">
+            <i class="fa-solid fa-bars"></i>
+            <i class="fa-solid fa-xmark"></i>
+            <div class="mobile hide">            
+                <ul>
+                    <li><a href="../index.html">Accueil</a></li>
+                    <li><a href="./actus.html">Actus</a></li>
+                    <li><a href="./program.html">Programme</a></li>
+                    <li><a href="./booking.html">Réservation</a></li>
+                    <li class="current"><a href="./contact.html">Contact</a></li>
+                    <li><a href="./purpose.html">À Propos</a></li>
+                </ul>
+            </div>
+        </div>
+        <nav class="desktop">
+            <ul>
+                <li><a href="../">Accueil</a></li>
+                <li><a href="./actus.html">Actus</a></li>
+                <li><a href="./program.html">Programme</a></li>
+                <li><a href="./booking.html">Réservation</a></li>
+                <li  class="current"><a href="./contact.html">Contact</a></li>
+                <li><a href="./purpose.html">À Propos</a></li>
+            </ul>
+        </nav>
+        <hr>
+        <div class="wrapper-header">
+            <div class="logo-wrapper"></div>
+            <div class="hero-wrapper">
+                <h1 class="h1">Festival des films plein air</h1>
+                <p class="intro">Du 05 au 08 août Parc Monceau Paris</p>
+            </div>
+        </div><!-- /wrapper-header -->
+    </header>
+    <section>
+        
+        <div class="form-container">
+            <h2>Contact</h2>
+            <span>formulaire de contact</span>
+            <form>
+                <div class="form-col">
+                    <div class="text-input">
+                        <div class="name-field">
+                        <input type="text" name="name" id="name" placeholder="Nom">
+                        </div>
+                        <div class="firstname-field">
+                            <input type="text" name="firstname" id="firstname" placeholder="prénom">
+                        </div>
+                        <div class="email-field">
+                            <input type="email" name="email" id="email" placeholder="email">
+                        </div>
+                    </div>
+                </div>
+                <div class="form-col">
+                    <div class="subject-field">
+                       <div class="col">
+                            <input type="text" placeholder="sujet">        
+                        </div>
+                    </div><!-- /subject-field -->
+                    <button class="btn-rapid-form">Envoyer</button>
+                </div>
+                <div class="form-col">
+                    <div class="textarea-field">
+                       <div class="col">
+                            <textarea name="textarea" id="textarea" placeholder="Votre message"></textarea>        
+                        </div>
+                    </div><!-- /textarea-field -->
+                </div>
+        </div><!-- /form -->
+
+    </section>
+    <footer>
+        <div class="footer-container">
+            <div class="col"><a href="./policy.html">Politique de confidentialité</a></div>
+            <div class="col"><a href="./confidentiality.html">Conditions générales</a></div>
+            <div class="col"><a href="./contact.html">Contact</a></div>
+        </div>
+        <span>2022&copy;Fesitvals des films plein air | Design : Web Agency</span>
+    </footer>
+</body>
+</html>
