--- a/maquettes/pages/actus.html
+++ b/maquettes/pages/actus.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="../../fontawesome-free-6.1.0-web/css/all.min.css">
     <link rel="shortcut icon" href="../../images cahier des charges/logo.png" type="image/x-icon">
-    <script src="../js/app.js"></script>
+    <script src="../js/app.js" defer></script>
     <title>Actualités du festival</title>
 </head>
 <body>
