--- a/maquettes/pages/contact.html
+++ b/maquettes/pages/contact.html
@@ -16,8 +16,8 @@
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="../../fontawesome-free-6.1.0-web/css/all.min.css">
     <link rel="shortcut icon" href="../../images cahier des charges/logo.png" type="image/x-icon">
-    <script src="../js/app.js"></script>
-    <title>Accueil</title>
+    <script src="../js/app.js" defer></script>
+    <title>Contact</title>
 </head>
 <body>
     <header>
