--- a/maquettes/pages/policy.html
+++ b/maquettes/pages/policy.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="../../fontawesome-free-6.1.0-web/css/all.min.css">
     <link rel="shortcut icon" href="../../images cahier des charges/logo.png" type="image/x-icon">
-    <script src="./js/app.js"></script>
+    <script src="./js/app.js" defer></script>
     <title>Politique de confidentialité</title>
 </head>
 <body>
