--- a/maquettes/pages/program.html
+++ b/maquettes/pages/program.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="../../fontawesome-free-6.1.0-web/css/all.min.css">
     <link rel="shortcut icon" href="../../images cahier des charges/logo.png" type="image/x-icon">
-    <script src="../js/app.js"></script>
-    <title>Actualités du festival</title>
+    <script src="../js/app.js" defer></script>
+    <title>Programme</title>
 </head>
 <body>
     <header>
