--- a/maquettes/index.html
+++ b/maquettes/index.html
@@ -2,7 +2,7 @@
 <!-- 
     /!\ -------- Important A lire -------- /!\
 
-        Ceci est une  maquettes d'apperçu, non définitve.
+        Ceci est une maquettes d'apperçu, non définitve.
         Les marges et les positions manquent de précision (mediaqueries),
         Tout comme certains éléments sont faux (ex:carousel)
 
@@ -76,11 +76,11 @@
                     </div>
                 </div>
                 <div class="card">
-                    <div class="card-img film">
-                        <img src="./img/popcorn.jpg" alt="popcorn au cinema">
+                    <div class="card-img calendar">
+                        <img src="./img/popcorn.jpg" alt="ticket de cinema">
                     </div>
                     <div class="card-text">
-                        <i class="fa-solid fa-film"></i>
+                        <i class="fa-solid fa-calendar-days"></i>
                         <p class="text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cupiditate distinctio eveniet fugit ullam, tempora, aut tempore minima quo deleniti quod consequatur ex sequi? Recusandae reprehenderit consectetur tempore mollitia quisquam delectus vitae.</p>
                     </div>
                 </div>
@@ -107,7 +107,7 @@
             </div><!-- /grid-2 -->
         </div>
         <div class="video-container">
-            <h2 class="h2">La vie est long fleuve tranquille</h2>
+            <h2 class="h2">La vie est un long fleuve tranquille</h2>
             <video width=540 controls autoplay>
                 <source src="https://assets.codepen.io/6093409/river.mp4" type="video/mp4">
                 Cette vidéo ne peut être affichée sur votre navigateur Internet.
@@ -163,7 +163,7 @@
             </div>
             <div class="form-col">
                 <div class="announcement">
-                    Pour une meilleure organisation,  les réservations supérieures à 4 personnes nécessites de contacter directement l'association par le formulaire.
+                    Pour une meilleure organisation,  les réservations supérieures à 4 personnes nécessitent de contacter directement l'association par le formulaire.
                     <button class="btn-rapid-form" type="submit">Réserver</button>
                 </div>
             </div>
@@ -187,10 +187,13 @@
                     <img src="./img/ticket.jpg" alt="ticket de cinema">
                 </div>
                 <div class="card-text">
-                    <p class="text">Lorem, ipsum dolor sit amet consectetur adipisicing elit..</p>
-                    <label for="newsletter">Votre Email</label>
-                    <input type="email" name="newsletter" id="newsletter">
-                    <button class="btn-rapid-form" type="submit">S"inscrire</button>
+                    <h2>Vous informer</h2>
+                    <!-- <p class="text">Lorem, ipsum dolor sit amet consectetur adipisicing elit..</p> -->
+                    <div class="newsletter-form">
+                        <label for="email">Email</label>
+                        <input type="email" name="newsletter" id="newsletter" placeholder="Votre Email">
+                        <button class="btn-rapid-form" type="submit">S'inscrire</button>
+                    </div>
                 </div>
             </div>
         </div>
