before uploading project

--- a/PFILM_02_codesource/index.html
+++ b/PFILM_02_codesource/index.html
@@ -56,7 +56,7 @@
         </div><!-- /wrapper-header -->
     </header>
     <section>
-        <h2>Coups de cœur</h2>
+        <h2 class="h2">Coups de cœur</h2>
         <div class="carousel">
             <i class="fa-solid fa-arrow-left-long"></i>
             <!-- rempli provisoirement avec un gif animé -->
@@ -185,7 +185,7 @@
                 <div class="text-coordonates">
                     <!-- pour la maquette la gestion de Google Maps se fait par iframe en prod la gestion sera par l'api pour évioter les blocages du client-->
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2623.8735531366524!2d2.3067663158279794!3d48.87968700716077!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e66fbe98f714c3%3A0xe62425fddeddc402!2sParc%20Monceau!5e0!3m2!1sfr!2sfr!4v1648027513477!5m2!1sfr!2sfr" style="border:0; box-shadow: none;" allowfullscreen="" loading="lazy"></iframe>
-                    <h2><i class="fas fa-map"></i>
+                    <h2 class="h2"><i class="fas fa-map"></i>
                         S'y rendre</h2>
                         <p class="text">
                             Rendez-vous au festival.
@@ -203,7 +203,7 @@
                     <img src="./img/newsletter.jpg" alt="image newsletter">
                 </div>
                 <div class="card-text">
-                    <h2>Restez informé</h2>
+                    <h2 class="h2">Restez informé</h2>
                     <p class="text">Tenez vous informé des dernières atualités de festivale en vous inscrivant à notre newsletter.</p>
                     <div class="newsletter-form">
                         <label for="email">Email</label>
