--- a/PFILM_02_codesource/pages/booking.html
+++ b/PFILM_02_codesource/pages/booking.html
@@ -48,7 +48,7 @@
     </div><!-- /wrapper-header -->
 </header>
 <section>
-        <h2>Réservez votre place</h2>
+        <h1 class="h2">Réservez votre place</h2>
 
         <div class="form-container">
             <div class="card">
