--- a/PFILM_02_codesource/pages/confidentiality.html
+++ b/PFILM_02_codesource/pages/confidentiality.html
@@ -14,9 +14,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../style.css">
-    <link rel="stylesheet" href="../../fontawesome-free-6.1.0-web/css/all.min.css">
+    <link rel="stylesheet" href="../scss/fontawesome-free-6.1.0-web/css/all.min.css">
     <link rel="shortcut icon" href="../../images cahier des charges/logo.png" type="image/x-icon">
-    <script src="./js/app.js" defer></script>
+    <script src="../js/app.js" defer></script>
     <title>Conditions générales</title>
 </head>
 <body>
@@ -48,7 +48,7 @@
         
         <hr>
         <div class="wrapper-header">
-            <h1 class="h1">Conditions générales</h1>
+            <h1 class="h2">Conditions générales</h2>
         </div><!-- /wrapper-header -->
     </header>
     <section class="policy">
