--- a/PFILM_02_codesource/pages/contact.html
+++ b/PFILM_02_codesource/pages/contact.html
@@ -51,7 +51,7 @@
         </div><!-- /wrapper-header -->
     </header>
     <section class="form">
-        <h2>Contact</h2>
+        <h1 class="h2">Contactez-nous</h1>
         
         <div class="form-container">
             <span>formulaire de contact</span>
