--- a/PFILM_02_codesource/pages/policy.html
+++ b/PFILM_02_codesource/pages/policy.html
@@ -26,28 +26,28 @@
             <i class="fa-solid fa-xmark"></i>
             <div class="mobile hide">            
                 <ul>
-                    <li class="current"><a href="/">Accueil</a></li>
-                    <li><a href="./pages/actus.html">Actus</a></li>
-                    <li><a href="./pages/program.html"">Programme</a></li>
-                    <li><a href="./pages/booking.html">Réservation</a></li>
-                    <li><a href="./pages/contact.html">Contact</a></li>
-                    <li><a href="./pages/purpose.html">À Propos</a></li>
+                    <li><a href="../index.html">Accueil</a></li>
+                    <li><a href="./actus.html">Actus</a></li>
+                    <li><a href="./program.html">Programme</a></li>
+                    <li><a href="./booking.html">Réservation</a></li>
+                    <li><a href="./contact.html">Contact</a></li>
+                    <li><a href="./purpose.html">À Propos</a></li>
             </div>
         </div>
         <nav class="desktop">
             <ul>
-                <li class=""><a href="../">Accueil</a></li>
-                <li><a href="">Actus</a></li>
-                <li><a href="">Programme</a></li>
-                <li><a href="">Réservation</a></li>
-                <li><a href="">Contact</a></li>
-                <li><a href="">À Propos</a></li>
+                <li><a href="../index.html">Accueil</a></li>
+                <li><a href="./actus.html">Actus</a></li>
+                <li><a href="./program.html">Programme</a></li>
+                <li><a href="./booking.html">Réservation</a></li>
+                <li><a href="./contact.html">Contact</a></li>
+                <li><a href="./purpose.html">À Propos</a></li>
             </ul>
         </nav>
         
         <hr>
         <div class="wrapper-header">
-            <h1 class="h1">Politique de confidentialité</h1>
+            <h1 class="h2">Politique de confidentialité</h1>
         </div><!-- /wrapper-header -->
     </header>
     <section class="policy">
