--- a/PFILM_02_codesource/pages/program.html
+++ b/PFILM_02_codesource/pages/program.html
@@ -38,6 +38,7 @@
         <hr>
     </header>
         <div class="program-container">
+            <h1 class="h2">Programme du festival</h1>
             <div class="film">
                 <img src="../img/235x320_affiche.gif" alt="affiche de film">
                 <div class="details">
