--- a/PFILM_02_codesource/pages/actus.html
+++ b/PFILM_02_codesource/pages/actus.html
@@ -4,6 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../scss/fontawesome-free-6.1.0-web/css/all.min.css">
     <link rel="shortcut icon" href="../img/logo.png" type="image/x-icon">
     <script src="../js/app.js" defer></script>
     <title>Actualités du festival</title>
@@ -15,12 +16,12 @@
             <i class="fa-solid fa-xmark"></i>
             <div class="mobile hide">            
                 <ul>
-                    <li><a href="#">Accueil</a></li>
-                    <li class="current"><a href="./pages/actus.html">Actus</a></li>
-                    <li><a href="./pages/program.html">Programme</a></li>
-                    <li><a href="./pages/booking.html">Réservation</a></li>
-                    <li><a href="./pages/contact.html">Contact</a></li>
-                    <li><a href="./pages/purpose.html">À Propos</a></li>
+                    <li><a href="../index.html">Accueil</a></li>
+                    <li class="current"><a href="./actus.html">Actus</a></li>
+                    <li><a href="./program.html">Programme</a></li>
+                    <li><a href="./booking.html">Réservation</a></li>
+                    <li><a href="./contact.html">Contact</a></li>
+                    <li><a href="./purpose.html">À Propos</a></li>
                 </ul>
             </div>
         </div>
@@ -37,7 +38,7 @@
     </header>
     <section>
         <div class="masonery-container">
-            <h2 class="h2">Actualités</h2>
+            <h1 class="h2">Actualités</h1>
             <div class="grid">
                 <div class="actu">
                     <div class="image">
